[package]
name = "referencer"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
